--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,11 +2,37 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
   <div class="container">
     <a class="navbar-brand fw-bold" href="/">My Blog</a>
-    <div class="navbar-nav ms-auto">
-      <a class="nav-link" href="/">Home</a>
-      <a class="nav-link" href="/about">Aout</a>
-      <a class="nav-link" href="/auth/login">Login</a>
-      <a class="nav-link" href="/auth/register">Register</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <!-- لینک‌های مشترک برای همه -->
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        
+        <% if (typeof user !== 'undefined' && user) { %>
+          <!-- نمایش این لینک‌ها فقط وقتی کاربر لاگین کرده -->
+          <li class="nav-item">
+            <a class="nav-link" href="/user/profile">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/logout">Logout</a>
+          </li>
+        <% } else { %>
+          <!-- نمایش این لینک‌ها فقط وقتی کاربر لاگین نکرده -->
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/register">Register</a>
+          </li>
+        <% } %>
+      </ul>
     </div>
   </div>
 </nav>
